--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
             <!-- Project 2 -->
             <div class="flex flex-col project-card w-full mx-auto" data-category="web">
-              <a href="https://yourprojectlink.com" target="_blank" rel="noopener">
+              <a href="https://irinasusca.github.io/mep2025/" target="_blank" rel="noopener">
                 <div class="aspect-[16/9] w-full overflow-hidden shadow-md relative group rounded-xl">
                 <img src="/mep.PNG" 
                     alt="Project 1" 
@@ -153,6 +153,25 @@
                 <span class="px-2 py-1 bg-darkpurply text-whitey  rounded font-body">HTML</span>
                 <span class="px-2 py-1 bg-darkpurply text-whitey  rounded font-body">CSS</span>
                 <span class="px-2 py-1 bg-darkpurply text-whitey  rounded font-body">Javascript</span>
+              </div>
+            </div>
+
+            <div class="flex flex-col project-card w-full mx-auto" data-category="web">
+              <a href="https://irinasusca.github.io/writeup-blog" target="_blank" rel="noopener">
+                <div class="aspect-[16/9] w-full overflow-hidden shadow-md relative group rounded-xl">
+                <img src="/blog.png" 
+                    alt="Project 1" 
+                    class="rounded-t-xl shadow-md transition-transform duration-500 ease-out group-hover:scale-105 group-hover:opacity-95 z-0" />
+                <div class="absolute inset-0 bg-white/5 opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
+                    </div>
+              </a>
+              <div class="bg-dark text-whitey dark:bg-[#d8c5f6] dark:text-darkpurply text-center py-2 rounded-b-md -mt-2 text-[16px] md:text-[18px] z-10 relative">
+                My CTF Writeup Blog 
+              </div>
+              <div class="flex space-x-2 mt-2 text-[12px] md:text-[14px]">
+                <span class="px-2 py-1 bg-darkpurply text-whitey  rounded font-body">Hugo</span>
+                <span class="px-2 py-1 bg-darkpurply text-whitey  rounded font-body">Cybersecurity</span>
+                <span class="px-2 py-1 bg-darkpurply text-whitey  rounded font-body">Python</span>
               </div>
             </div>
 
